cmake_minimum_required(VERSION 3.24)
project(PROI_23L_101_Apteka)
set(CMAKE_CXX_STANDARD 17)

add_subdirectory(external/Catch2)
add_subdirectory(external/json)
file(GLOB sourceFiles src/*.cpp)
file(GLOB testFile tests/*.cpp)
#add_definitions("TESTING_SOMETHING")
#add_executable(my_tests  tests/test.cpp src/client.cpp src/inventory.cpp  src/logger.cpp src/file_manager.cpp src/simulation.cpp src/medicine.cpp src/counter.cpp src/windows.cpp  src/clients_queue.cpp  src/transaction.cpp)
add_executable(my_tests ${sourceFiles} ${testFile} include/cxxopts.hpp)
target_link_libraries(my_tests PRIVATE Catch2::Catch2WithMain)
target_link_libraries(my_tests PRIVATE nlohmann_json::nlohmann_json)
add_executable(PROI_23L_101_Apteka main.cpp ${sourceFiles} include/cxxopts.hpp)
target_link_libraries(PROI_23L_101_Apteka PRIVATE nlohmann_json::nlohmann_json)
target_compile_definitions(my_tests PUBLIC TESTING_ENV)

